--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+spring.application.name=pos-system
+server.port=8081
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pos?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Abc@123
+
+
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
